kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csp-email
  namespace: management
  labels:
    app: csp-email
spec:
  replicas: 1
  selector:
    matchLabels:
      app: csp-email
  template:
    metadata:
      labels:
        app: csp-email
    spec:
      containers:
      - name: email
        image: 592806604814.dkr.ecr.ap-northeast-2.amazonaws.com/email:1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
#      hostAliases:
#      - ip: 211.188.180.36
#        hostnames:
#        - cspapi.sktelecom.com
