kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: csp-email
  namespace: management
spec:
  selector:
    app: csp-email
  type: ClusterIP
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
