kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: csp-email
  namespace: cspapi
  labels:
    app.kubernetes.io/name: "csp-email"
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /    
spec:
  rules:
  - host: csp-email.mwportal.com
    http:
      paths:
      - path: /
        backend:
          serviceName: csp-email
          servicePort: 8080
